add dqn simple entity

--- a/DeepQLearningExperiments.html
+++ b/DeepQLearningExperiments.html
@@ -11,47 +11,35 @@
         <div class="env-view">
             <canvas id="env-canvas"></canvas>
         </div>
+
+        <div class="env-info" id="env-info-box">
+        </div>
     </div>
 
     <script src="js/random.js"></script>
+
+    <script src="js/network/fully_connected_layer.js"></script>
+    <script src="js/network/loss.js"></script>
+    <script src="js/network/optimizer.js"></script>
+    <script src="js/network/weight.js"></script>
+    <script src="js/network/neural_network.js"></script>
+
     <script src="js/spaces/DiscreteSpace.js"></script>
     <script src="js/spaces/BoxSpace.js"></script>
     <script src="js/envs/CartPole.js"></script>
+
+    <script src="js/deep_q_network.js"></script>
     <script>
         let environmentCanvas = document.getElementById("env-canvas")
         environmentCanvas.width = 600
         environmentCanvas.height = 400
+
         let environment = new CartPole(environmentCanvas)
         environment.Reset()
 
-        let action = 0
-        let prevTime = 0
-
-        function Draw() {
-            let currTime = performance.now()
-            if (currTime - prevTime > 50) {
-                prevTime = currTime
-
-                let {state, reward, done} = environment.Step(action)
-                environment.Draw()
-                
-                if (done)
-                    return
-            }
-
-            window.requestAnimationFrame(Draw)
-        }
-
-        document.addEventListener('keydown', (e) => {
-            if (e.key == 'ArrowLeft') {
-                action = 0
-            }
-            else if (e.key == 'ArrowRight') {
-                action = 1
-            }
-        })
-
-        Draw()
+        let environmentInfoBox = document.getElementById("env-info-box")
+        let dqn = new DeepQNetwork(environment, environmentInfoBox)
+        dqn.Run()
     </script>
 </body>
 </html>
