--- a/DeepQLearningExperiments.html
+++ b/DeepQLearningExperiments.html
@@ -62,7 +62,7 @@
             minEpsilon: 0.01,
             decay: 0.004,
             alpha: 0.7,
-            discountFactor: 0.618,
+            gamma: 0.618,
 
             trainModelPeriod: 4,
             updateTargetModelPeriod: 100,
