--- a/DeepQLearningExperiments.html
+++ b/DeepQLearningExperiments.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <script src="js/random.js"></script>
+    <script src="js/functions.js"></script>
     <script src="js/replay_buffer.js"></script>
 
     <script src="js/network/layers/fully_connected_layer.js"></script>
